# tokenvizppt

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  environment.yml  package-lock.json  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260511_0001_initial_schema.py  20260511_0002_slide_versions.py  20260515_0003_accounts_credits_admin.py  20260515_0004_user_password_hash.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  announcements.py  assets.py  auth.py  credits.py  exports.py  generation.py  health.py  invites.py  router.py  sessions.py  slides.py  styles.py
backend/app/core/: settings.py
backend/app/db/: session.py
backend/app/models/: __init__.py  admin.py  asset.py  auth.py  credit.py  generation.py  message.py  session.py  slide.py
backend/app/services/: access_control.py  admin_service.py  ai_image_generator.py  asset_store.py  auth_service.py  credit_service.py  db_mirror.py  db_session_repository.py  deck_spec.py  dom_to_pptx_exporter.py  editable_html.py  email_service.py  export_runner.py  generation_runner.py  html_validation.py  image_analyzer.py  llm_deck_generator.py  llm_slide_planner.py  mock_slide_generator.py  pptx_exporter.py  provider_config_service.py  referral_service.py  session_store.py  slide_editor.py  slide_history.py  spec_pptx_exporter.py  style_presets.py  usage_service.py
backend/scripts/: diagnose_llm_api.py  diagnose_vision_api.py  reproduce_504.py
backend/tokenvizppt_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+86 files in other folders)
