[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenvizppt-backend"
version = "0.1.0"
description = "FastAPI backend for tokenvizPPT."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "celery>=5.4.0",
  "cryptography>=42.0.0",
  "fastapi>=0.115.0",
  "openai>=1.59.0",
  "openpyxl>=3.1.0",
  "playwright>=1.49.0",
  "psycopg[binary]>=3.2.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
  "python-pptx>=1.0.2",
  "python-multipart>=0.0.20",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.0",
  "sse-starlette>=2.1.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
